--- a/public/index.html
+++ b/public/index.html
@@ -54,9 +54,9 @@
                             </div>
                             <div class="panel panel-body" id="articles">
 
-                                    <ul id="results">
+                                    <div id="results">
                                           
-                                    </ul>
+                                    </div>
                                         
                             </div>
 
